change qr type from free text to enum
