# apidocs/swagger.json
@@ -30,8 +30,13 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            "qr",
+                            "barcode"
+                        ],
                         "type": "string",
-                        "description": "Type of code to generate: 'qr' (default) or 'barcode'",
+                        "default": "qr",
+                        "description": "Type of code to generate",
                         "name": "type",
                         "in": "formData"
                     },
